--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <a href="#" class="btn">Let's Talk</a>
             </div>
            <div class="img-hidden">
-            <img src="./images/5af1df21-fc42-4506-b2da-7de48c6300bd.png" alt="">
+            <img src="./images/799ebc9b-d948-4bc0-97c8-5fcc3d272463.jpg" alt="">
            </div>
         </div>
 
